[gd_scene load_steps=37 format=2]

[ext_resource path="res://sprites/table.png" type="Texture" id=1]
[ext_resource path="res://sprites/bat00.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://sprites/bat01.png" type="Texture" id=4]
[ext_resource path="res://Padel.gd" type="Script" id=5]
[ext_resource path="res://sprites/bat11.png" type="Texture" id=6]
[ext_resource path="res://Ball.gd" type="Script" id=7]
[ext_resource path="res://sprites/effect0.png" type="Texture" id=8]
[ext_resource path="res://sprites/ball.png" type="Texture" id=9]
[ext_resource path="res://sprites/bat10.png" type="Texture" id=10]
[ext_resource path="res://Controller.gd" type="Script" id=11]
[ext_resource path="res://Goal.gd" type="Script" id=12]
[ext_resource path="res://Score.gd" type="Script" id=13]
[ext_resource path="res://sprites/effect1.png" type="Texture" id=14]
[ext_resource path="res://sprites/bat02.png" type="Texture" id=15]
[ext_resource path="res://sprites/bat12.png" type="Texture" id=16]
[ext_resource path="res://Point.gd" type="Script" id=17]
[ext_resource path="res://sound/theme.ogg" type="AudioStream" id=18]
[ext_resource path="res://AudioStreamPlayer2D.gd" type="Script" id=19]
[ext_resource path="res://sprites/over.png" type="Texture" id=20]
[ext_resource path="res://sprites/menu0.png" type="Texture" id=21]
[ext_resource path="res://sprites/menu1.png" type="Texture" id=22]
[ext_resource path="res://Pong.gd" type="Script" id=23]
[ext_resource path="res://GameOver.gd" type="Script" id=24]
[ext_resource path="res://MainMenu.gd" type="Script" id=25]

[sub_resource type="Animation" id=1]
resource_name = "Point"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Point"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.408, 58.0846 )

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Lost"
tracks/0/type = "value"
tracks/0/path = NodePath("Lost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Lost"
tracks/0/type = "value"
tracks/0/path = NodePath("Lost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 6.48414

[sub_resource type="RectangleShape2D" id=9]

[sub_resource type="RectangleShape2D" id=10]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Pong" type="Node2D"]
script = ExtResource( 23 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Table" type="Sprite" parent="Game"]
position = Vector2( 400, 240 )
texture = ExtResource( 1 )

[node name="ScoreLeft" type="Node2D" parent="Game"]
position = Vector2( 300, 83 )
script = ExtResource( 13 )

[node name="ScoreRight" type="Node2D" parent="Game"]
position = Vector2( 500, 83 )
script = ExtResource( 13 )
color = "blue"

[node name="GoalEffectRight" type="Node2D" parent="Game"]
position = Vector2( 400, 240 )
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="Game/GoalEffectRight"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/GoalEffectRight"]
anims/Point = SubResource( 1 )

[node name="GoalEffectLeft" type="Node2D" parent="Game"]
position = Vector2( 400, 240 )
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="Game/GoalEffectLeft"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/GoalEffectLeft"]
anims/Point = SubResource( 2 )

[node name="Player1" type="Area2D" parent="Game"]
position = Vector2( 100, 100 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Bat" type="Sprite" parent="Game/Player1"]
texture = ExtResource( 2 )

[node name="Hit" type="Sprite" parent="Game/Player1"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )

[node name="Lost" type="Sprite" parent="Game/Player1"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Player1"]
position = Vector2( 4.10454, 0 )
scale = Vector2( 1.12, 0.999999 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/Player1"]
anims/Hit = SubResource( 4 )
anims/Lost = SubResource( 5 )

[node name="Controller" type="Node" parent="Game/Player1"]
script = ExtResource( 11 )

[node name="Player2" type="Area2D" parent="Game"]
position = Vector2( 700, 380 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Bat" type="Sprite" parent="Game/Player2"]
texture = ExtResource( 10 )

[node name="Hit" type="Sprite" parent="Game/Player2"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 6 )

[node name="Lost" type="Sprite" parent="Game/Player2"]
modulate = Color( 1, 1, 1, 0.2 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Player2"]
position = Vector2( -4.105, 0 )
scale = Vector2( 1.12, 1 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/Player2"]
anims/Hit = SubResource( 6 )
anims/Lost = SubResource( 7 )

[node name="Controller" type="Node" parent="Game/Player2"]
script = ExtResource( 11 )

[node name="Ball" type="Area2D" parent="Game"]
position = Vector2( 400, 240 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Game/Ball"]
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Ball"]
shape = SubResource( 8 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="Game/Ball"]
script = ExtResource( 19 )

[node name="TopWall" type="Area2D" parent="Game"]
position = Vector2( 400, -26.2398 )
scale = Vector2( 38.2, 3.88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/TopWall"]
scale = Vector2( 1.041, 1.2 )
shape = SubResource( 9 )

[node name="BottomWall" type="Area2D" parent="Game"]
position = Vector2( 400, 505.709 )
scale = Vector2( 38.2, 3.88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/BottomWall"]
scale = Vector2( 1.041, 1.2 )
shape = SubResource( 9 )

[node name="LeftGoal" type="Area2D" parent="Game"]
position = Vector2( 0, 240 )
scale = Vector2( 1, 22.56 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/LeftGoal"]
shape = SubResource( 10 )

[node name="RightGoal" type="Area2D" parent="Game"]
position = Vector2( 800, 241.054 )
scale = Vector2( 1, 22.56 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/RightGoal"]
shape = SubResource( 10 )

[node name="GameOver" type="Sprite" parent="."]
position = Vector2( 400, 240 )
texture = ExtResource( 20 )
script = ExtResource( 24 )

[node name="MainMenu" type="AnimatedSprite" parent="."]
position = Vector2( 400, 240 )
frames = SubResource( 11 )
script = ExtResource( 25 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -15.146
autoplay = true
[connection signal="area_entered" from="Game/Player1" to="Game/Player1" method="_on_area_entered"]
[connection signal="area_entered" from="Game/Player2" to="Game/Player2" method="_on_area_entered"]
[connection signal="area_entered" from="Game/Ball" to="Game/Ball" method="_on_area_entered"]
[connection signal="on_bounce" from="Game/Ball" to="Game" method="_on_bounce"]
[connection signal="area_entered" from="Game/LeftGoal" to="Game/LeftGoal" method="_on_area_entered"]
[connection signal="on_goal" from="Game/LeftGoal" to="Game/GoalEffectRight" method="_on_goal"]
[connection signal="on_goal" from="Game/LeftGoal" to="Game" method="_on_goal" binds= [ 2 ]]
[connection signal="on_goal" from="Game/LeftGoal" to="Game/Player1" method="_on_lost_point"]
[connection signal="area_entered" from="Game/RightGoal" to="Game/RightGoal" method="_on_area_entered"]
[connection signal="on_goal" from="Game/RightGoal" to="Game/GoalEffectLeft" method="_on_goal"]
[connection signal="on_goal" from="Game/RightGoal" to="Game" method="_on_goal" binds= [ 1 ]]
[connection signal="on_goal" from="Game/RightGoal" to="Game/Player2" method="_on_lost_point"]
